--- a/M3/d1_intro_to_ml/exercises/00_Lecture_Intro_to_sklearn.ipynb
+++ b/M3/d1_intro_to_ml/exercises/00_Lecture_Intro_to_sklearn.ipynb
@@ -2,109 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from icecream import icecream"
+    "from icecream import icecream\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     0    1    2    3            4\n",
-       "0  5.1  3.5  1.4  0.2  Iris-setosa\n",
-       "1  4.9  3.0  1.4  0.2  Iris-setosa\n",
-       "2  4.7  3.2  1.3  0.2  Iris-setosa\n",
-       "3  4.6  3.1  1.5  0.2  Iris-setosa\n",
-       "4  5.0  3.6  1.4  0.2  Iris-setosa"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['(mebooksfree.com)lab&med&dia&dis&cli&lab&lap&2nd.pdf', '(mebooksfree.net)bas&cli&pha&kat&14th.pdf', '(mebooksfree.net)cli&sig&neu&cam&1st.pdf', '(mebooksfree.net)cur&dia&tre&neu&bru&3rd.pdf', '(mebooksfree.net)cur&dia&tre&spo&med&mcm&1st.pdf', '(mebooksfree.net)dif&dia&neu&cli&poc&gui&tse&2nd.pdf', '(mebooksfree.net)fir&aid&bas&sci&gen&pri&le&hwa&pik&3rd.pdf', '(mebooksfree.net)fir&aid&rad&war&ste&kau&bha&daj&1st.pdf', '(mebooksfree.net)fir&aid&usm&ste1&le&bhu&soc&cha&zur&2018.pdf', '(mebooksfree.net)gen&med&pra&gui&taf&arc&1st.pdf', '(mebooksfree.net)lis&org&psy&tex&neu&dav&fle&koplov&mel&4th.pdf', '(mebooksfree.net)rap&rev&pat&gol&5th.pdf', '(mebooksfree.net)tra&sur&oni&for&pom&1st.pdf', '1000books.csv', '1001.csv', '1001.json', '570.csv', \"Ben Soma's Jog Wheel.amxd\", 'C0200(1).mp4', 'chromedriver_linux64.zip', 'chromedriver_linux64.zip.1', 'cuda_11.2.0_460.27.04_linux.run', 'desktop.ini', 'file-IO.ipynb', 'file.json', 'GH018769 - (9x16).mp4', 'google-chrome-stable_current_amd64.deb', 'gya.pkl', 'Main.csv', 'main.pkl', 'New Playlist.glink', 'notclean.csv', 'to-100.csv', 'Top50_paramount_comedy.csv', 'Top50_paramount_comedy.gsheet']\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data/iris.data', header=None)\n",
-    "df.head()"
+    "import glob\n",
+    "print(glob.glob('*.*'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       0    1    2    3               4\n",
+       "0    5.1  3.5  1.4  0.2     Iris-setosa\n",
+       "1    4.9  3.0  1.4  0.2     Iris-setosa\n",
+       "2    4.7  3.2  1.3  0.2     Iris-setosa\n",
+       "3    4.6  3.1  1.5  0.2     Iris-setosa\n",
+       "4    5.0  3.6  1.4  0.2     Iris-setosa\n",
+       "..   ...  ...  ...  ...             ...\n",
+       "145  6.7  3.0  5.2  2.3  Iris-virginica\n",
+       "146  6.3  2.5  5.0  1.9  Iris-virginica\n",
+       "147  6.5  3.0  5.2  2.0  Iris-virginica\n",
+       "148  6.2  3.4  5.4  2.3  Iris-virginica\n",
+       "149  5.9  3.0  5.1  1.8  Iris-virginica\n",
+       "\n",
+       "[150 rows x 5 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.1</td>\n      <td>3.5</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Iris-setosa</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4.9</td>\n      <td>3.0</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Iris-setosa</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4.7</td>\n      <td>3.2</td>\n      <td>1.3</td>\n      <td>0.2</td>\n      <td>Iris-setosa</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.6</td>\n      <td>3.1</td>\n      <td>1.5</td>\n      <td>0.2</td>\n      <td>Iris-setosa</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.0</td>\n      <td>3.6</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>Iris-setosa</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>145</th>\n      <td>6.7</td>\n      <td>3.0</td>\n      <td>5.2</td>\n      <td>2.3</td>\n      <td>Iris-virginica</td>\n    </tr>\n    <tr>\n      <th>146</th>\n      <td>6.3</td>\n      <td>2.5</td>\n      <td>5.0</td>\n      <td>1.9</td>\n      <td>Iris-virginica</td>\n    </tr>\n    <tr>\n      <th>147</th>\n      <td>6.5</td>\n      <td>3.0</td>\n      <td>5.2</td>\n      <td>2.0</td>\n      <td>Iris-virginica</td>\n    </tr>\n    <tr>\n      <th>148</th>\n      <td>6.2</td>\n      <td>3.4</td>\n      <td>5.4</td>\n      <td>2.3</td>\n      <td>Iris-virginica</td>\n    </tr>\n    <tr>\n      <th>149</th>\n      <td>5.9</td>\n      <td>3.0</td>\n      <td>5.1</td>\n      <td>1.8</td>\n      <td>Iris-virginica</td>\n    </tr>\n  </tbody>\n</table>\n<p>150 rows × 5 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('ai-fall-exercises/M3/d1_intro_to_ml/data/iris.data', header=None)\n",
+    "df"
    ]
   },
   {
@@ -116,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,10 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[0.22222222, 0.625     , 0.06779661, 0.04166667],\n",
@@ -291,9 +248,8 @@
        "       [0.44444444, 0.41666667, 0.69491525, 0.70833333]])"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
    "source": [
@@ -312,33 +268,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "1.0\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jan/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    },
-    {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array(['Iris-setosa'], dtype=object)"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
@@ -358,24 +306,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([1, 6, 6, 6, 1, 1, 6, 1, 6, 6, 1, 6, 6, 6, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       6, 1, 6, 6, 1, 1, 1, 6, 6, 1, 1, 1, 6, 6, 1, 6, 6, 1, 1, 6, 6, 1,\n",
-       "       1, 6, 1, 6, 1, 6, 0, 0, 0, 2, 0, 2, 0, 7, 0, 2, 7, 2, 2, 0, 2, 0,\n",
-       "       2, 2, 4, 2, 4, 2, 4, 0, 0, 0, 0, 0, 0, 2, 2, 2, 2, 4, 2, 0, 0, 0,\n",
-       "       2, 2, 2, 0, 2, 7, 2, 2, 2, 0, 7, 2, 5, 4, 3, 5, 5, 3, 2, 3, 5, 3,\n",
-       "       5, 4, 5, 4, 4, 5, 5, 3, 3, 4, 5, 4, 3, 4, 5, 3, 4, 4, 5, 3, 3, 3,\n",
-       "       5, 4, 4, 3, 5, 5, 4, 5, 5, 5, 4, 5, 5, 5, 4, 5, 5, 4], dtype=int32)"
+       "array([3, 1, 1, 1, 3, 3, 1, 1, 1, 1, 3, 1, 1, 1, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       1, 3, 1, 1, 3, 3, 3, 1, 1, 3, 3, 3, 1, 1, 3, 1, 1, 3, 3, 1, 1, 3,\n",
+       "       3, 1, 3, 1, 3, 1, 5, 5, 5, 2, 5, 2, 5, 6, 5, 2, 6, 2, 2, 5, 2, 5,\n",
+       "       2, 2, 4, 2, 4, 2, 4, 5, 5, 5, 5, 5, 5, 6, 6, 6, 2, 4, 2, 5, 5, 5,\n",
+       "       2, 2, 2, 5, 2, 6, 2, 2, 2, 5, 6, 2, 7, 4, 0, 7, 7, 0, 2, 0, 7, 0,\n",
+       "       7, 4, 7, 4, 4, 7, 7, 0, 0, 4, 7, 4, 0, 4, 7, 0, 4, 4, 7, 0, 0, 0,\n",
+       "       7, 4, 4, 0, 7, 7, 4, 7, 7, 7, 4, 7, 7, 7, 4, 7, 7, 4], dtype=int32)"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 13
     }
    ],
    "source": [
@@ -384,6 +332,13 @@
     "clf = KMeans().fit(X)\n",
     "clf.predict(X)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
